--- a/src/triton_object_recognition/CMakeLists.txt
+++ b/src/triton_object_recognition/CMakeLists.txt
@@ -1,21 +1,20 @@
 cmake_minimum_required(VERSION 3.5)
 project(triton_object_recognition)
 
-# Default to C99
+# Default to C99 for C and C++14 for C++
 if(NOT CMAKE_C_STANDARD)
   set(CMAKE_C_STANDARD 99)
 endif()
-
-# Default to C++14
 if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 14)
 endif()
 
+# Compiler options
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-# find dependencies
+# Find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclcpp_components REQUIRED)
@@ -24,47 +23,45 @@ find_package(triton_interfaces REQUIRED)
 find_package(cv_bridge REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(image_transport REQUIRED)
-find_package(OpenCV 4.5.3 REQUIRED)
 find_package(Boost REQUIRED COMPONENTS filesystem)
 
-# Use Torch_DIR environment variable if set
-if(DEFINED ENV{Torch_DIR})
-  set(Torch_DIR $ENV{Torch_DIR})
-else()
-  set(Torch_DIR "/default/path/to/libtorch/share/cmake/Torch")
-endif()
-find_package(Torch REQUIRED)
+# Include directories
+include_directories(
+  include
+  ${OpenCV_INCLUDE_DIRS}
+  ${Boost_INCLUDE_DIRS}
+)
 
-include_directories(include ${catkin_INCLUDE_DIRS})
-include_directories(${OpenCV_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
-
+# Create a shared library
 add_library(triton_object_recognition SHARED
   src/object_recognizer.cpp
 )
 
-target_link_libraries(triton_object_recognition ${OpenCV_LIBRARIES} ${Boost_LIBRARIES})
-target_link_libraries(your_executable_name "${TORCH_LIBRARIES}")
+# Link libraries
+target_link_libraries(triton_object_recognition
+  ${OpenCV_LIBRARIES}
+  ${Boost_LIBRARIES}
+)
 
+# Register component nodes
 rclcpp_components_register_nodes(triton_object_recognition 
   "triton_object_recognition::ObjectRecognizer"
 )
 
-target_compile_definitions(triton_object_recognition
-  PRIVATE "triton_object_recognition_CPP_BUILDING_DLL"
-)
-
+# Define target dependencies explicitly
 ament_target_dependencies(triton_object_recognition
-  "rclcpp"
-  "rclcpp_components"
-  "std_msgs"
-  "triton_interfaces"
-  "cv_bridge"
-  "sensor_msgs"
-  "image_transport"
-  "OpenCV"
-  "Boost"
+  rclcpp
+  rclcpp_components
+  std_msgs
+  triton_interfaces
+  cv_bridge
+  sensor_msgs
+  image_transport
+  OpenCV
+  Boost
 )
 
+# Install the library and other directories
 install(TARGETS
   triton_object_recognition
   ARCHIVE DESTINATION lib
@@ -78,6 +75,7 @@ install(DIRECTORY
   DESTINATION share/${PROJECT_NAME}/
 )
 
+# Testing
 if(BUILD_TESTING)
   find_package(launch_testing_ament_cmake REQUIRED)
   add_launch_test(
@@ -85,4 +83,5 @@ if(BUILD_TESTING)
   )
 endif()
 
+# Package configuration
 ament_package()
