--- a/src/triton_object_recognition/package.xml
+++ b/src/triton_object_recognition/package.xml
@@ -17,6 +17,7 @@
   <depend>sensor_msgs</depend>
   <depend>image_transport</depend>
   <depend>realsense2_camera</depend>
+  <depend>python3-torch</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
