--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -2,7 +2,7 @@ name: ROS2 Build and Test CI
 
 on:
   push:
-    branches: [ master]
+    branches: [ master ]
   pull_request:
     branches: [ master ]
   workflow_dispatch:
@@ -11,7 +11,6 @@ jobs:
   build_and_test:
     runs-on: ubuntu-20.04
     steps:
-
       - name: Check out ubc-subbots/triton
         uses: actions/checkout@v2
 
@@ -24,7 +23,7 @@ jobs:
         run: |
           rosdep update
           rosdep install -i --from-path src --rosdistro foxy -y
-          
+
       - name: Cache OpenCV
         id: opencv-cache
         uses: actions/cache@v2
@@ -56,5 +55,17 @@ jobs:
           colcon test
           colcon test-result --verbose
 
+      # Install additional dependencies specific to object recognition
+      - name: Install additional dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libopencv-dev python3-opencv
+          # Install other necessary packages for object recognition
+          sudo apt-get install -y ros-foxy-vision-opencv
+          sudo apt-get install -y ros-foxy-image-transport
 
-
+      # Verify object recognition setup
+      - name: Verify object recognition setup
+        run: |
+          # Run any specific verification commands for object recognition components
+          echo "Verifying object recognition components"
