--- a/src/triton_pid_controller/CMakeLists.txt
+++ b/src/triton_pid_controller/CMakeLists.txt
@@ -23,24 +23,27 @@ find_package(sensor_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(triton_interfaces REQUIRED)
 find_package(tf2 REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
 
-include_directories(include ${catkin_INCLUDE_DIRS})
+include_directories(include)
 
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
-#target_link_libraries(triton_pid_controller ${YAML_CPP_LIBRARIES})
+# Add executable
 add_executable(triton_pid_controller src/triton_pid_controller.cpp)
 
-target_link_libraries(triton_pid_controller ${YAML_CPP_LIBRARIES})
-target_include_directories(triton_pid_controller PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>)
+# Link libraries
+ament_target_dependencies(triton_pid_controller 
+  rclcpp 
+  rclcpp_components 
+  sensor_msgs  
+  std_msgs 
+  triton_interfaces 
+  tf2 
+  tf2_geometry_msgs
+)
 
+# Install
 install(TARGETS triton_pid_controller
   DESTINATION lib/${PROJECT_NAME})
-
-ament_target_dependencies(triton_pid_controller rclcpp rclcpp_components sensor_msgs  std_msgs triton_interfaces tf2)
 
 install(DIRECTORY
   launch
@@ -51,12 +54,10 @@ install(DIRECTORY
 if(BUILD_TESTING)
   # find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
-  # uncomment the line when a copyright and license is not present in all source files
-  # set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # uncomment the line when this package is not in a git repo
-  #set(ament_cmake_cpplint_FOUND TRUE)
+  # uncomment the line when a copyright and license is not present
+  # set(ament_cmake_cpplint_FOUND TRUE)
   # ament_lint_auto_find_test_dependencies()
 endif()
 
 ament_package()
+
