--- a/src/triton_pid_controller/package.xml
+++ b/src/triton_pid_controller/package.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0"?>
-<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>triton_pid_controller</name>
   <version>0.0.0</version>
@@ -16,6 +15,8 @@
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>tf2</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2_geometry_msgs</depend>
   
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
@@ -24,3 +25,4 @@
     <build_type>ament_cmake</build_type>
   </export>
 </package>
+
