--- a/src/triton_controls/package.xml
+++ b/src/triton_controls/package.xml
@@ -18,6 +18,7 @@
   <depend>sensor_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>tf2</depend>
+  <depend>tf2_geometry_msgs</depend>
   <depend>robot_localization</depend>
 
   <test_depend>ament_lint_auto</test_depend>
